--- a/chal-apache/challenge/index.html
+++ b/chal-apache/challenge/index.html
@@ -46,6 +46,6 @@
 <body>
     <div class="container">
         <h1>kCTF Test Page</h1>
-        <p>This is a test page for the Apache deployment in Docker.</p>    </div>
+        </div>
 </body>
 </html>
