--- a/chal-apache-latest/challenge/index.html
+++ b/chal-apache-latest/challenge/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>kCTF Test Page</h1>
-        <p>This is a test page for the Apache deployment in Docker.</p>    </div>
+        <h1>kCTF Page</h1>
+      </div>
 </body>
 </html>
